--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+body {
+    height: 100%;
+    margin: 0;
+}
 .delete {
     display: inline-block;
     vertical-align: left;
@@ -19,8 +23,8 @@
 }
 
 #content {
-    height: 500px;
-    width: 1000px;
+    height: 100vh;
+    width: 100%;
 }
 
 .item_name {
@@ -31,4 +35,57 @@
 .item_name:hover {
     color: #232323;
     text-decoration: underline;
+}
+.button-wrap {
+    position: relative;
+}
+input[type="file"] {
+    position: absolute;
+    z-index: -1;
+    top: 10px;
+    left: 8px;
+    font-size: 17px;
+    color: #b8b8b8;
+}
+
+#search {
+    text-align: center;
+    background: #1167b8;
+}
+
+#search_input {
+    border-style: solid;
+    border-color: #04315c;
+    border-width: 1;
+    background: #1167b8;
+    color: white;
+}
+
+#search_input:hover {
+    transition: 0.3s;
+    background: #04315c;
+}
+
+#submit_query {
+    border-style: solid;
+    border-color: #04315c;
+    border-width: 1;
+    background: #1167b8;
+    color: white;
+}
+
+#submit_query:hover {
+    transition: 0.3s;
+    background: #04315c;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+    }
+}
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: white;
+    }
 }
