--- a/templates/editor.html
+++ b/templates/editor.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <form method="post" action="/save/{{ file_name }}">
-        <div>
+        <div style="text-align: center;">
             <label for="msg">{{ file_name }}</label><br>
             <textarea id="content" name="ta">{{ file_content }}</textarea><br>
         </div>
