--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 body {
     height: 100%;
+    width: 100%;
     margin: 0;
 }
 .delete {
@@ -20,11 +21,13 @@ body {
 
 .items {
     list-style: none;
+    margin: 1% 1% 0 1%;
+    padding-left: 0;
 }
 
 #content {
-    height: 100vh;
-    width: 100%;
+    height: 85vh;
+    width: 98vw;
 }
 
 .item_name {
@@ -32,20 +35,25 @@ body {
     color: black;
 }
 
+.item {
+    border: 1 solid #e0e0e0;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 2px;
+    margin-left: 0;
+    width: auto;
+}
+
 .item_name:hover {
     color: #232323;
     text-decoration: underline;
 }
-.button-wrap {
-    position: relative;
-}
-input[type="file"] {
-    position: absolute;
-    z-index: -1;
-    top: 10px;
-    left: 8px;
-    font-size: 17px;
-    color: #b8b8b8;
+
+.folder {
+    width: 15px;
+    height: 15px;
+    margin: 0 5px 0 5px
 }
 
 #search {
