--- a/static/style.css
+++ b/static/style.css
@@ -3,19 +3,15 @@ body {
     width: 100%;
     margin: 0;
 }
-.delete {
-    display: inline-block;
-    vertical-align: left;
+.delete img {
+    align: middle;
 }
 
-.download {
-    display: inline-block;
-    vertical-align: left;
+.download img {
+    align: middle;
 }
 
 .item_name {
-    display: inline-block;
-    vertical-align: left;
     margin-right: 10px;
 }
 
@@ -33,9 +29,12 @@ body {
 .item_name {
     text-decoration: none;
     color: black;
+    margin-bottom: 5px;
 }
 
 .item {
+    display: flex;
+    align-items: center;
     border: 1 solid #e0e0e0;
     background-color: #e0e0e0;
     border-radius: 5px;
@@ -53,7 +52,8 @@ body {
 .folder {
     width: 15px;
     height: 15px;
-    margin: 0 5px 0 5px
+    margin: 0 10px 0 0;
+    align: middle;
 }
 
 #search {
