--- a/static/style.css
+++ b/static/style.css
@@ -59,14 +59,18 @@ body {
 #search {
     text-align: center;
     background: #1167b8;
+    padding: 0;
 }
 
 #search_input {
-    border-style: solid;
-    border-color: #04315c;
-    border-width: 1;
+    border: 2px transparent solid;
     background: #1167b8;
     color: white;
+    margin: 0;
+}
+
+#search_input::placeholder {
+    color: lightgray;
 }
 
 #search_input:hover {
@@ -75,23 +79,23 @@ body {
 }
 
 #submit_query {
-    border-style: solid;
-    border-color: #04315c;
-    border-width: 1;
+    border: none;
     background: #1167b8;
     color: white;
 }
 
 #submit_query:hover {
     transition: 0.3s;
-    background: #04315c;
+    color: lightgray;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
     body {
         background-color: black;
     }
 }
+*/
 @media (prefers-color-scheme: light) {
     body {
         background-color: white;
