--- a/static/style.css
+++ b/static/style.css
@@ -35,8 +35,8 @@ body {
 .item {
     display: flex;
     align-items: center;
-    border: 1 solid #e0e0e0;
-    background-color: #e0e0e0;
+    border: 1 solid #ebebeb;
+    background-color: #ebebeb;
     border-radius: 5px;
     padding: 5px;
     margin: 2px;
