--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,10 @@
 <body>
     <div id="search">
     <form action="/search" method="POST">
-        <button id="submit_query"><i class="fa-house"></i></button>
+        <button id="submit_query"><i class="fa fa-home"></i></button>
         <input type="text" placeholder="Recherche..." name="sb" id="search_input" />
         <button type="submit" id="submit_query"><i class="fa fa-search"></i></button>
+        <button id="submit_query" type="reset"><a class="fa fa-power-off logout" href="/logout"></a></button>
     </form>
     </div>
     <form action = "/add" method = "POST" enctype = "multipart/form-data">
