--- a/templates/login.html
+++ b/templates/login.html
@@ -10,9 +10,17 @@
     <title>File Upload</title>
 </head>
 <body>
-    <form action="/drive" method="POST">
-        <input placeholder="Nom d'utilisateur"/>
-        <input placeholder="Mot de passe" type="password"/>
+    <h1>Se connecter</h1>
+    <form action="/login" method="POST">
+        <input placeholder="Nom d'utilisateur" type="text" name="username"/>
+        <input placeholder="Mot de passe" type="password" name="password"/>
         <button type="submit">Se connecter</button>
+    </form>
+    <h1>S'inscrire</h1>
+    <form action="/register" method="POST">
+        <input placeholder="Nom d'utilisateur" type="text" name="username"/>
+        <input placeholder="Mot de passe" type="password" name="password"/>
+        <button type="submit">S'inscrire</button>
+    </form>
 </body>
 </html>
