--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,17 @@
         <button id="submit_query"><i class="fa fa-home"></i></button>
         <input type="text" placeholder="Recherche..." name="sb" id="search_input" />
         <button type="submit" id="submit_query"><i class="fa fa-search"></i></button>
+        <a id="submit_query" href="/account/{{username}}">{{ username }}</a>
         <button id="submit_query" type="reset"><a class="fa fa-power-off logout" href="/logout"></a></button>
     </form>
     </div>
     <form action = "/add" method = "POST" enctype = "multipart/form-data">
-        <input type = "file" name = "files[]" id="getFile" multiple="true" required autocomplete="off" />
+        <input type = "file" name = "files[]" id="getFile" multiple="true" onchange="FileSelected()" required autocomplete="off" />
         <br>
-        <button type = "submit" >Envoyer</button>
+        <div id="file_list"></div>
+        <br>
+        <button type="reset">Reset</button>
+        <button type="submit">Envoyer</button>
     </form>
     <form action = "/newfolder" method = "POST">
         <input type = "text" name = "folder_input" placeholder="Nouveau dossier" />
