--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <button id="submit_query"><i class="fa fa-home"></i></button>
         <input type="text" placeholder="Recherche..." name="sb" id="search_input" />
         <button type="submit" id="submit_query"><i class="fa fa-search"></i></button>
-        <a id="submit_query" href="/account/{{username}}">{{ username }}</a>
+        <a id="submit_query" href="/account">{{ username }}</a>
         <button id="submit_query" type="reset"><a class="fa fa-power-off logout" href="/logout"></a></button>
     </form>
     </div>
