--- a/templates/account.html
+++ b/templates/account.html
@@ -3,19 +3,23 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <script src="{{url_for('static', filename='script.js')}}"></script>
         <title></title>
     </head>
     <body>
+        {% include 'nav.html' %}
         <h1>Paramètres de {{ user }}</h1>
         <h2>Nouveau mot de passe</h2>
-        <form action="/change_password/{{user}}" method="POST">
-            <label>Mot de passe actuel : </label><input type="password" name="current_password" required/><br>
-            <label>Nouveau mot de passe : </label><input type="password" name="new_password" required/>
+        <form action="/change_password" method="POST">
+            <input type="password" name="current_password" placeholder="mot de passe acutel" required/><br>
+            <input type="password" name="new_password" placeholder="nouveau mot de passe" required/><br>
             <input type="submit"/>
         </form>
         <h2>Supprimer votre compte</h2>
-        <form action="/delete_account/{{user}}" method="POST">
-            <label>Mot de passe : </label><input type="password" name="password" required/>
+        <form action="/delete_account" method="POST">
+            <input placeholder="mot de passe" type="password" name="password" required/><br>
             <input type="submit"/>
         </form>
 
