--- a/templates/login.html
+++ b/templates/login.html
@@ -4,23 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="{{url_for('static', filename='script.js')}}"></script>
     <title>File Upload</title>
 </head>
 <body>
-    <h1>Se connecter</h1>
-    <form action="/login" method="POST">
-        <input placeholder="Nom d'utilisateur" type="text" name="username" required/>
-        <input placeholder="Mot de passe" type="password" name="password" required/>
-        <button type="submit">Se connecter</button>
+    <form action="/login" method="POST" class="log_reg_form">
+        <h1>Se connecter</h1>
+        <div>
+        <span class="material-icons" style="display: inline-block; vertical-align: middle;">person</span>
+        <input placeholder="Nom d'utilisateur" type="text" name="username" required/><br>
+        </div>
+        <div>
+        <span class="material-icons" style="display: inline-block; vertical-align: middle;">lock</span>
+        <input placeholder="Mot de passe" type="password" name="password" required/><br>
+        </div>
+        <button type="submit" class="connect-button" size="100" maxlength="100">Se connecter</button>
     </form>
-    <h1>S'inscrire</h1>
-    <form action="/register" method="POST">
+    <form action="/register" method="POST" class="log_reg_form">
+        <h1>S'inscrire</h1>
+        <div>
+        <span class="material-icons" style="display: inline-block; vertical-align: middle;">person</span>
         <input placeholder="Nom d'utilisateur" type="text" name="username" required/>
-        <input placeholder="Mot de passe" type="password" name="password" required/>
-        <button type="submit">S'inscrire</button>
+        </div>
+        <div>
+        <span class="material-icons" style="display: inline-block; vertical-align: middle;">lock</span>
+        <input placeholder="Mot de passe" type="password" name="password" required/><br>
+        </div>
+        <button type="submit" class="connect-button">S'inscrire</button>
     </form>
 </body>
 </html>
