--- a/templates/editor.html
+++ b/templates/editor.html
@@ -16,9 +16,9 @@
             <label for="msg">{{ file_name }}</label><br>
             <textarea id="content" name="ta">{{ file_content }}</textarea><br>
         </div>
-        <div>
-            <button type="submit" class="btn">Sauvegarder</button>
-            <a href="/">Annuler</a>
+        <div align="center">
+            <button type="submit" class="save_modif">Sauvegarder</button>
+            <button class="cancel_modif"><a href="/">Annuler</a></button>
         </div>
     </form>
     </body>
