--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&family=Ubuntu&display=swap');
 body {
     height: 100%;
@@ -10,9 +9,58 @@ a {
     text-decoration: none;
     color: black;
 }
+button {
+    font-family: 'Ubuntu';
+}
+
+label {
+    cursor: pointer;
+    color: black;
+    background-color: #1167b8;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-top: 1%;
+    margin-left: 1%; 
+}
+label:hover {
+    transition: 0.3s;
+    background-color: #04315c;
+}
+
+#getFile {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.nav-icon {
+    display: inline-block;
+    vertical-align: middle;
+    color: white;
+    background-color: transparent;
+    border: none;
+}
+
+.button-icon {
+    background-color: #1167b8;
+    border: 1px solid transparent;
+    border-radius: 3px;
+}
+
+.button-icon:hover {
+    background-color: #04315c;
+}
 
 .material-icons.md-18 { font-size: 18px; }
 
+.md-white {
+    color: white;
+}
+
+.vert-align {
+    vertical-align: middle;
+}
 
 .log_reg_form {
     text-align: center;
@@ -43,9 +91,8 @@ a {
     color: lightgray;
 }
 
-
-.item_name {
-    margin-right: 10px;
+.margin-left-1 {
+    margin-left: 1%;
 }
 
 .items {
@@ -62,13 +109,12 @@ a {
 .item_name {
     text-decoration: none;
     color: black;
-    margin-bottom: 5px;
 }
 
 .item {
     display: flex;
     align-items: center;
-    border: 1 solid #ebebeb;
+    border: 1 solid transparent;
     background-color: #ebebeb;
     border-radius: 5px;
     padding: 5px;
@@ -118,14 +164,7 @@ a {
     background: #04315c;
 }
 
-#submit_query {
-    display: inline-block;
-    border: none;
-    background: #1167b8;
-    color: white;
-}
-
-#submit_query:hover {
+.nav-icon:hover {
     transition: 0.3s;
     color: lightgray;
 }
@@ -143,22 +182,38 @@ h4 {
     margin-top: 10px;
 }
 
+.cancel_modif {
+    border: 1px solid #E61E1E;
+    background-color: #E61E1E;
+    border-radius: 3px;
+    padding: 3px;
+}
+
+.cancel_modif:hover {
+    transition: 0.3s;
+    background-color: #D50D0D;
+}
+
+.save_modif {
+    border: 1px solid #3FBF3F;
+    background-color: #3FBF3F;
+    border-radius: 3px;
+    padding: 3px;
+}
+
+.save_modif:hover {
+    transition: 0.3s;
+    background-color: #2EAE2E;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #111111;
-        color: white;
     }
     .item {
-        border: 1 solid #262626;
         background-color: #262626;
     }
-    p {
-        color: white;
-    }
-    a {
-        color: white;
-    }
-    .item_name {
+    body, p, a, .item_name, input, span, button {
         color: white;
     }
     .rename {
@@ -167,17 +222,8 @@ h4 {
     .item_name:hover {
         color: lightgray;
     }
-    input {
+    input, button {
         background-color: #131313;
         border: 1px solid black;
-        color: white;
-    }
-    button {
-        background-color: #131313;
-        border: 1px solid black;
-        color: white;
-    }
-    span {
-        color: white;
     }
 }
