--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,9 +1,13 @@
 <div id="search">
 <form action="/search" method="POST">
-    <a href="/" id="submit_query"><i class="fa fa-home"></i></a>
+    <!--<a href="/" id="submit_query"><i class="fa fa-home"></i></a>-->
+    <a href="/"><span class="material-icons nav-icon">home</span></a>
     <input type="text" placeholder="Recherche..." name="sb" id="search_input" />
-    <button type="submit" id="submit_query"><i class="fa fa-search"></i></button>
-    <a id="submit_query" href="/account">{{ username }}</a>
-    <button id="submit_query" type="reset"><a class="fa fa-power-off logout" href="/logout"></a></button>
+    <!--<button type="submit" id="submit_query"><i class="fa fa-search"></i></button>-->
+    <button type="submit" id="submit_query" class="nav-icon">
+        <span class="material-icons nav-icon">search</span>
+    </button>
+    <a id="submit_query" class="material-icons nav-icon" href="/account">account_circle</a>
+    <a class="material-icons nav-icon" href="/logout" class="material-icons">power_settings_new</a>
 </form>
 </div>
