--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     </form>
     <br>
     <form action="/newfolder" method="POST">
-        <input class="margin-left-1 vert-align" type="text" name="folder_input" placeholder="Nouveau dossier"/>
+        <input class="margin-left-1 vert-align folder_input" type="text" name="folder_input" placeholder="Nouveau dossier"/>
         <button type="submit" class="button-icon">
             <span class="material-icons md-white vert-align">create_new_folder</span>
         </button>
