--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<div id="search">
+<div id="search_div">
 <form action="/search" method="POST">
     <!--<a href="/" id="submit_query"><i class="fa fa-home"></i></a>-->
     <a href="/"><span class="material-icons nav-icon">home</span></a>
