--- a/templates/account.html
+++ b/templates/account.html
@@ -11,17 +11,17 @@
     </head>
     <body>
         {% include 'nav.html' %}
-        <h1>Paramètres de {{ user }}</h1>
-        <h2>Nouveau mot de passe</h2>
-        <form action="/change_password" method="POST">
-            <input type="password" name="current_password" placeholder="mot de passe acutel" required/><br>
-            <input type="password" name="new_password" placeholder="nouveau mot de passe" required/><br>
-            <input type="submit"/>
+        <h1 align="center">Paramètres de {{ user }}</h1>
+        <form class="log_reg_form" action="/change_password" method="POST">
+            <h2>Nouveau mot de passe</h2>
+            <input type="password" name="current_password" placeholder="Mot de passe acutel" required/><br>
+            <input type="password" name="new_password" placeholder="Nouveau mot de passe" required/><br>
+            <button type="submit">Changer de mot de passe</button>
         </form>
-        <h2>Supprimer votre compte</h2>
-        <form action="/delete_account" method="POST">
-            <input placeholder="mot de passe" type="password" name="password" required/><br>
-            <input type="submit"/>
+        <form class="log_reg_form" action="/delete_account" method="POST">
+            <h2>Supprimer votre compte</h2>
+            <input placeholder="Mot de passe" type="password" name="password" required/><br>
+            <button type="submit">Supprimer le compte</button>
         </form>
 
     </body>
