--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,11 @@
         <li class="item">
             <p>Emplacement acutel : {{ path }}</p>
         </li>
+        {% if path != "/" %}
         <li class="item">
             <a href="/return">Répertoire précédent</a>
         </li>
+        {% endif %}
         {% for item in folders %}
         <li class="item">
             <a style="align: middle; margin-right: 10px;">
