--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,12 @@ a {
     color: black;
 }
 
+hr {
+    height: 1px;
+    background-color: gray;
+    border: none;
+}
+
 .margin-right-10 {
     margin-right: 10px;
 }
@@ -128,11 +134,6 @@ label:hover {
 .item {
     display: flex;
     align-items: center;
-    border: 1 solid transparent;
-    background-color: #eeeeee;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 2px;
     margin-left: 0;
     width: auto;
 }
